--- a/_sass/_wax.scss
+++ b/_sass/_wax.scss
@@ -347,7 +347,7 @@ item pages (iiif + metadata)
       font-family: $heading-font;
       font-weight: bold;
       font-size: 3em;
-      color: #D98508;
+      color: #74A57F;
       text-decoration: none !important;
       background-color: $bg-color;
       margin: 0;
