--- a/_layouts/qatar_item.html
+++ b/_layouts/qatar_item.html
@@ -22,11 +22,6 @@ meta:
   - label: 'Language'
     value: page.language
   - label: 'General Notes'
-    value: page.general_notes.note
-  - label: 'Adaptation Notes'
-    value: page.adap_notes
-    type: loop
-  - label: 'IIIF Manifest'
-    value: page.manifest
-    type:  link
+    value: page.general_notes.first.note
 ---
+
