--- a/_layouts/qatar_item.html
+++ b/_layouts/qatar_item.html
@@ -21,7 +21,8 @@ meta:
     value: page.location
   - label: 'Language'
     value: page.language
-  - label: 'General Notes'
-    value: page.general_notes.first.note
+  - label: 'Original'
+    value: page.adaptid.first
+    type: link
 ---
 
